fix stretch css property

--- a/src/css/collapsible.css
+++ b/src/css/collapsible.css
@@ -11,7 +11,7 @@ h2 {
   flex-direction: column;
   align-items: flex-start;
   padding: 0px;
-  align-items: "stretch";
+  align-items: stretch;
 
 }
 
@@ -21,7 +21,7 @@ h2 {
   align-items: flex-start;
   padding: 0px 30px 10px;
   background: #FFFFFF;
-  align-items: "stretch";
+  align-items: stretch;
 }
 
 .Collapsible__contentInner p {
